<resources>
    <string name="app_name">博多WMS</string>
    <string name="title_storage_business">入库业务</string>
    <string name="title_in_house_management">库内管理</string>
    <string name="title_outbound_business">出库业务</string>
    <string name="activity_login_company">chinetek 上海辰达 @2020</string>
    <string name="version_msg">当前版本：1.0</string>
    <string name="warehousename">仓库</string>
    <string name="SaveSuccess">保存成功！</string>
    <string name="login_setting">设置</string>
    <string name="login_Version">版本：</string>
    <string name="Setting_Save">保存设置</string>
    <string name="Setting_IPAdress">服务器：</string>
    <string name="Setting_Port">端口：</string>
    <string name="Setting_TimeOut">超时时间：</string>
    <string name="Setting_Second">秒</string>
    <string name="Setting_PrintIP">打印机IP：</string>
    <string name="Setting_ElecScale">电子称IP：</string>
    <string name="login_login">登陆</string>
    <string name="Error_IntRequire">需要输入整数！</string>
    <string name="Error_isnotnum">请输入数字！</string>
    <string name="Error_no_internet">无网络连接！</string>
    <string name="Error_generic_server_down">服务器连接超时！</string>
    <string name="Error_generic_error">通讯错误！</string>
    <string name="Error_PrintIPNotSet">请设置打印机IP地址！</string>
    <string name="Error_EricIPNotSet">请设置电子称IP地址！</string>
    <string name="Message_No_ReceiveAreaID">收货货位未配置！</string>
    <string name="Message_No_PickAreaID">拣货货位未配置！</string>
    <string name="Message_No_MenuList">菜单权限未配置！</string>
    <string name="Message_No_WhareHouse">获取仓库列表失败！</string>
    <string name="Message_ERROR_MoveStock">移入库位不正确！</string>
    <string name="Msg_Login">用户验证...</string>
    <string name="Msg_UploadLogFile">日志文件上传中...</string>
    <string name="LogUpload">日志上报</string>
    <string name="activity_login_WareHousChoice">仓库选择:</string>
    <string name="activity_select_transfer_wareHouse_choice">请选择要调拨的仓库</string>
    <string name="Msg_GetWareHouse">获取仓库信息...</string>
    <string name="Error_SubmitMore">操作过于频繁！</string>
    <string name="config">确定</string>
    <string name="bill">单号:</string>
    <string name="voucher_no">单据编号:</string>
    <string name="area_no">库位号:</string>
    <string name="submit">提交</string>
    <string name="print">打印</string>
    <string name="reprint_pallet">托盘补打</string>
    <string name="Count">数量:</string>
    <string name="AllPackage">整箱</string>
    <string name="AllPallet">整托</string>
    <string name="scan_type_pallet">托盘(点击切换操作模式)</string>
    <string name="AllEAN">EAN</string>
    <string name="unboxing">整箱/散件(点击切换操作模式)</string>
    <string name="compine_pallet">组托</string>
    <string name="label_reprint">打印</string>
    <string name="spare_parts">散件</string>
    <string name="combine_trays">拼托</string>
    <string name="balcony">月台</string>
    <string name="boxing">装箱</string>
    <string name="choice">选择</string>
    <string name="text">测试</string>
    <string name="jump">去扫描</string>
    <string name="material_no">物料编号</string>
    <string name="batch_no">批次</string>
    <string name="batch_no_desc">批次:</string>
    <string name="material_desc">名称</string>
    <string name="supplier">供应商：</string>
    <string name="palletNo">托盘号:</string>
    <string name="outer_box">外箱码:</string>
    <string name="outerBoxOrSpareParts">整箱或散件:</string>
    <string name="offScan">下架扫描</string>
    <string name="name">品名:</string>
    <string name="request_print_order_purchase_return">正在打印验退单据..</string>
    <string name="setting">设置</string>
    <string name="star">*</string>
    <string name="stock_qty">库存:</string>
    <string name="stock_query">查询</string>
    <string name="Msg_request_material_info">获取校验物料信息...</string>
    <string name="Msg_GetAreaModelADF">获取库位信息...</string>
    <string name="Msg_GetT_SerialNoByPalletADF">正在获取条码信息...</string>
    <string name="Msg_SaveT_InStockDetailADF">保存收货明细列表...</string>
    <string name="Msg_GetT_InStockDetailListByHeaderIDADF">获取收货明细列表...</string>
    <string name="Error_ReceiveOver">该物料收货数量大于可收数量！</string>
    <string name="Msg_SaveT_InStockTaskDetailADF">保存上架明细列表...</string>
    <string name="Msg_GetT_InTaskDetailListByHeaderIDADF">获取上架明细列表...</string>
    <string name="Msg_order_refer">正在提交订单明细...</string>
    <string name="message_request_get_order_detail">正在获取单据明细...</string>
    <string name="message_request_refer_barcode_info">正在提交条码信息...</string>
    <string name="message_request_system_refer">正在提交过账操作...</string>
    <string name="message_request_material_info">正在获取物料信息...</string>
    <string name="message_request_print">正在提交打印信息...</string>
    <string name="message_request_quality_inspection_refer">正在提交质检合格信息...</string>
    <string name="message_request_quality_inspection_transfer_refer">正在提交生成二阶段调拨信息...</string>
    <string name="message_request_quality_un_inspection_refer">正在提交单据信息...</string>
    <string name="message_request_barcode_refer">正在提交条码信息...</string>
    <string name="message_request_purchase_inspection_detail">正在获取采购验退单表体信息....</string>
    <string name="message_request_production_return_detail">正在获取工单退料表体信息....</string>
    <string name="message_request_sales_return_detail">正在获取销售退货表体信息....</string>
    <string name="message_request_refer_inventory_movement">正在提交移库信息....</string>
    <string name="Error_UpshelfQtyBiger">扫描数量超过上架数量！</string>
    <string name="Error_BarcodeScaned">该条码已扫描！</string>
    <string name="Error_BarcodeNotInList">此物料不在列表中！</string>
    <string name="setting_system_info">系统设置</string>
    <string name="setting_print_info">打印设置</string>
    <string name="setting_title">设置</string>
    <string name="setting_print_laser_printer_desc">激光打印机:</string>
    <string name="setting_print_desktop_printer_desc">台式打印机:</string>
    <string name="setting_print_in_stock_laser_printer_desc">入库激光打印机:</string>
    <string name="setting_print_in_stock_desktop_printer_desc">入库台式打印机:</string>
    <string name="setting_print_out_stock_laser_printer_desc">出库激光打印机:</string>
    <string name="setting_print_out_stock_desktop_printer_desc">出库台式打印机:</string>
    <string name="setting_print_bluetooth_printer_desc">蓝牙打印机:</string>
    <string name="setting_print_in_stock_printer_type">入库打印方式:</string>
    <string name="setting_print_out_stock_printer_type">出库打印方式:</string>
    <string name="setting_print_out_stock_packing_box_printer_type">出库拼箱打印方式:</string>
    <string name="setting_print_laser_printer">激光打印机</string>
    <string name="setting_print_desktop_printer">台式打印机</string>
    <string name="setting_print_printer_name_hint">请选择或输入打印机名称</string>
    <string name="setting_print_bluetooth_printer_desc_hint">请选择或输入MAC地址</string>
    <string name="setting_print_request_get_print_name_list">正在获取打印机名称列表信息...</string>
    <string name="setting_user_select_warehouse_no">仓库</string>
    <string name="setting_system_official_environment_ip_address_button">正式区</string>
    <string name="setting_system_test_environment_ip_address_button">测试区</string>
    <string name="setting_system_ip_address_hint">请输入IP地址</string>
    <string name="Msg_Verifying_Permission_information">正在校验权限信息！</string>
    <string name="main_menu_title">主菜单</string>
    <string name="main_menu_item_purchase_storage">采购收货</string>
    <string name="main_menu_item_spot_check">到货抽检</string>
    <string name="main_menu_item_upshelf">上架</string>
    <string name="main_menu_item_production_storage">成品入库</string>
    <string name="main_menu_item_production_storage_pallet_no_print">成品托盘打印</string>
    <string name="main_menu_item_production_returns">工单退料</string>
    <string name="main_menu_item_two_stage_transfer_to_storage">二阶段调拨入库</string>
    <string name="main_menu_item_one_stage_transfer_to_storage">一阶段调拨入库</string>
    <string name="main_menu_item_outsourcing">委外入库</string>
    <string name="main_menu_item_active_other_storage">有源杂入</string>
    <string name="main_menu_item_active_scan_other_storage">无源杂入</string>
    <string name="main_menu_item_product_return_print_storage">工单退料打印</string>
    <string name="main_menu_item_product_return_scan_storage">工单退料扫描</string>
    <string name="main_menu_item_active_sales_return">销售退货</string>
    <string name="main_menu_item_quality_inspection">质检处理</string>
    <string name="main_menu_item_mobile_warehouse_inventory">移库</string>
    <string name="main_menu_item_in_stock_combine_pallet">拼托</string>
    <string name="main_menu_item_set_tray">组托</string>
    <string name="main_menu_item_remove_tray">拆托</string>
    <string name="main_menu_item_inventory_adjustment">库存调整</string>
    <string name="main_menu_item_inventory_scan">盘点</string>
    <string name="main_menu_item_inventory_inquiry">库存查询</string>
    <string name="main_menu_item_pick_up_and_out_of_warehouse">领料出库</string>
    <string name="main_menu_item_sales_out_of_stock">销售发货</string>
    <string name="main_menu_item_administrative_use">行政领用</string>
    <string name="main_menu_item_off_shelf_scan">下架扫描</string>
    <string name="main_menu_item_other_outbound">其他出库</string>
    <string name="main_menu_item_outsourcing_dispatch">委外发料</string>
    <string name="main_menu_item_transfer_out_of_warehouse">调拨出库</string>
    <string name="main_menu_item_loading_truck">发货装车</string>
    <string name="main_menu_item_other_loading_truck">市内装车</string>
    <string name="main_menu_item_other_loading_truck_callback">二阶段回调</string>
    <string name="main_menu_item_delivery_lcl">发货拼箱</string>
    <string name="main_menu_item_loading_truck_setting">装车设置</string>
    <string name="main_menu_item_purchase_inspection">采购验退</string>
    <string name="main_menu_item_purchase_sale">销售验退</string>
    <string name="main_menu_item_purchase_product">成品验退</string>
    <string name="main_menu_item_purchase_return">采购退货</string>
    <string name="main_menu_item_outstock_lock">发货结案</string>
    <string name="combine_pallet_hint_barcode">请扫描箱码或托盘码</string>
    <string name="combine_pallet_create_new_tray_no">生成</string>
    <string name="combine_pallet_tray_no_scan">请扫描托盘码</string>
    <string name="combine_pallet_outer_barcode_no_scan">请扫描托盘码</string>
    <string name="Hit_Selectwohouse">点击选择仓库</string>
    <string name="activity_pallet_barcode">托盘条码：</string>
    <string name="activity_pallet_PalletNum">累计箱数/件数：</string>
    <string name="activity_pallet_PalletPrint">托盘标签打印</string>
    <string name="barcode">条码:</string>
    <string name="activity_pallet_combine">组托方式：</string>
    <string name="activity_pallet_On">添加组托</string>
    <string name="offscan_voucher_no_hint">请扫描或输入单号</string>
    <string name="offscan_voucher_no_desc">订单号:</string>
    <string name="offscan_scan_qty_desc">数量:</string>
    <string name="offscan_scan_input_qty">请输入数量</string>
    <string name="packing_scan_type_packing">拼箱</string>
    <string name="packing_scan_barcode">条码:</string>
    <string name="packing_scan_type_unpacking">拆箱</string>
    <string name="packing_scan_platform">月台</string>
    <string name="packing_scan_packing">拼箱码</string>
    <string name="packing_scan_create_packing_no">生成</string>
    <string name="packing_scan_packing_no">生成或扫描拼箱码</string>
    <string name="packing_scan_unstock">非库存拼箱</string>
    <string name="packing_scan_barcode_hint">请扫描外箱码/69码/物料编码</string>
    <string name="packing_scan_print">打印</string>
    <string name="packing_scan_delete_packing">删除拼箱</string>
    <string name="packing_scan_qty">数量:</string>
    <string name="packing_scan_qty_hint">请输入数量</string>
    <string name="review_scan_driver">司机姓名：</string>
    <string name="review_scan_driver_hint">请输入司机姓名</string>
    <string name="review_scan_erp_voucher_no">单号:</string>
    <string name="review_scan_erp_voucher_no_hint">请扫描单号</string>
    <string name="review_scan_receiver">收货人:</string>
    <string name="review_scan_receive_address">收货地址:</string>
    <string name="review_scan_sum_qty">外箱数: 0    散件数: 0  </string>
    <string name="review_scan_refer">提交</string>
    <string name="review_receive_logistics_company">物流公司:</string>
    <string name="review_receive_logistics_company_hint">请输入物流公司</string>
</resources>