<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.liansu.boduowms.modules.menu.storageBusinessMenu.StorageBusinessMenuFragment"
        android:label="@string/title_storage_business"
        tools:layout="@layout/fragment_storage_business_menu" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.liansu.boduowms.modules.menu.inHouseManagementMenu.InHouseManagementMenuFragment"
        android:label="@string/title_in_house_management"
        tools:layout="@layout/fragment_in_house_management_menu" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.liansu.boduowms.modules.menu.outboundBusiness.NotificationsFragment"
        android:label="@string/title_outbound_business"
        tools:layout="@layout/fragment_outbound_business_menu" />
</navigation>
