<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/LayoutStyle"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView

           android:text="@string/material_no"
            android:id="@+id/txt_material_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:maxLines="1"
            android:textColor="@color/blueviolet"
            android:textSize="@dimen/activity_list_text_first" />

        <TextView
            android:text="@string/batch_no"
            android:id="@+id/txt_batch_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:maxLines="1"
            android:textColor="@color/dodgerblue"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtERPVoucherNo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:textColor="@color/mediumseagreen"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:text="@string/material_desc"
            android:id="@+id/txt_material_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="2"
            android:textColor="@color/peru"
            android:textSize="15sp" />


    </LinearLayout>

</LinearLayout>